--- a/package.json
+++ b/package.json
@@ -29,19 +29,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.10",
-    "@angular-eslint/builder": "17.2.1",
-    "@angular-eslint/eslint-plugin": "17.2.1",
-    "@angular-eslint/eslint-plugin-template": "17.2.1",
-    "@angular-eslint/schematics": "17.2.1",
-    "@angular-eslint/template-parser": "17.2.1",
+    "angular-eslint": "18.4.0",
     "@angular/cli": "^18.2.10",
     "@angular/compiler-cli": "^18.2.10",
     "@types/jasmine": "~5.1.0",
-    "@typescript-eslint/eslint-plugin": "7.2.0",
-    "@typescript-eslint/parser": "7.2.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint": "^9.13.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -49,7 +42,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.2.5",
-    "prettier-eslint": "^16.3.0",
+    "typescript-eslint": "8.12.2",
     "typescript": "~5.4.2"
   }
 }
